# despegues

./: .gitignore  README.md  primerDespegue.ipynb  pyproject.toml  requirements.txt
informes/entrega1/: entrega1.html
src/: VisualizacionConjunto.ipynb  lectura.ipynb  predictions.ipynb  segundoDespegue.ipynb  visualizaciones_dask.ipynb  waitTimesHeatmap.html  waitTimesHistogram.html
src/airstrip/: airplane.py  data_reader.py
src/data/: test.parquet  train.parquet
src/exploratory_analysis/: datosICAO.ipynb
src/models/: Red Neuronal.ipynb  TranformersUltron.ipynb  aventura.ipynb  model_HMM.ipynb  model_LSTM.ipynb  model_Naive_Bayes.ipynb  model_PLANTILLA.ipynb  model_XG_boost.ipynb  model_ada_boost.ipynb  model_dense_nw-Copy1.ipynb  model_dense_nw.ipynb  model_dense_nw_by_runway.ipynb  model_heuristica.ipynb  model_heuristica2.ipynb  model_linear_regression.ipynb  model_random_forest.ipynb
src/notebooks/: TranformersUltronPartes.ipynb  converted.json  datosICAO.ipynb  depuracion.ipynb  geometry_processor.ipynb
src/preprocess/: airport_constants.py  data_processor.py  dataframe_processor.py  decoder.py  geometry_processor.ipynb  meteo.py  parquet_processor.py  pipeline.ipynb  pipeline.json  pipeline.py  por_ordenar.py  reader.py  train_test_split.ipynb  utilities.py
src/puntosespera/: ._runways.geojson  ._taxiways.geojson  holding_points.geojson  taxiways.geojson
src/test/: predictions.ipynb  preprocess_scenarios.ipynb
src/test nb/: Test.ipynb  Visualizacion_chunk1.ipynb  pruebecit2a.ipynb  pruebecita.ipynb
src/visualization/: dash.py  graphs.py  maps.py
(+2156 files in other folders)
